src/main/java/com/example/project/user/error/CustomException.java
package com.example.project.user.error;

import lombok.Getter;
import lombok.RequiredArgsConstructor;

@Getter
@RequiredArgsConstructor
public class CustomException extends RuntimeException {

    private final ErrorCode errorcode;
}
